--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,30 @@
     <title>Frooble</title>
   </head>
   <body>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function () {
+          navigator.serviceWorker
+            .getRegistrations()
+            .then(function (registrations) {
+              for (let registration of registrations) {
+                registration.unregister();
+              }
+              navigator.serviceWorker
+                .register("serviceWorker.js")
+                .then(function (registration) {
+                  console.log(
+                    "ServiceWorker registration successful with scope:",
+                    registration.scope
+                  );
+                })
+                .catch(function (err) {
+                  console.error("ServiceWorker registration failed:", err);
+                });
+            });
+        });
+      }
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
